templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ether-faucet
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ether-faucet-frontend-svc
            port:
              number: 80
  - host: ether-faucet-api
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ether-faucet-backend-svc
            port:
              number: 80

  - host: redis-web-interface
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ether-faucet-redis-svc
            port:
              number: 80

  - host: ethereum-lite-explorer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ethereum-lite-explorer-svc
            port:
              number: 80
  
  - host: geth-bootnode
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: geth-bootnode-svc
            port:
              number: 8545
